implement /tickers/pages and /stocks/pages methods
